# coursework_bank_application

./: .gitignore  README.md  isort  pyproject.toml  spending_by_category_report.txt
data/: operations Mon Jan 01 20_45_05 MSK 2024-Mon Jun 24 17_37_09 MSK 2024.xls
src/: log.py  main.py  reports.py  services.py  utils.py  views.py
tests/: spending_by_category_report.txt  test_card_operations.xlsx  test_reports.py  test_services.py  test_utils.py  test_views.py
